--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
             // Your API key will be exposed, leading to potential misuse and high costs.
             // The correct, secure method is to have a backend server make this API call.
             // The browser (client-side) CANNOT securely access system environment variables.
-            const apiKey = "AIzaSyA57L6FoMctfCxxtYCFnnJLO12a14W1X5I";
+            const apiKey = "AIzaSyAXhEG9JuqX8OnRXF6lLN4MbhAKyqEVs-k";
 
             if (apiKey === "PASTE_YOUR_GOOGLE_API_KEY_HERE") {
                 alert("Veuillez coller votre clé API Google dans le code pour activer cette fonctionnalité.");
@@ -634,11 +634,14 @@
             }
 
             //const model = 'gemini-1.5-flash-latest';
-            const model = 'gemini-pro';
+
+            //const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/${model}:generateContent?key=${apiKey}`;
             
-            // const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/${model}:generateContent?key=${apiKey}`;
-            const apiUrl = `https://generativelanguage.googleapis.com/v1/models/${model}:generateContent?key=${apiKey}`;
-            
+            // In your getAiRecommendations function...
+
+            const model = 'gemini-2.0-flash';
+            const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/${model}:generateContent?key=${apiKey}`;
+
             const recommendationsSection = document.getElementById('ai-recommendations');
             const loader = document.getElementById('loader');
             const contentDiv = document.getElementById('recommendations-content');
@@ -708,6 +711,5 @@ En vous basant sur ce contexte et les scores du DSI, générez 3 recommandations
     </script>
 </body>
 </html>
-
 
 
